# MykaEngine-Reborn

./: .gitignore  .gitmodules  CMakeLists.txt  MykaEngineProfile-Shutdown.json  MykaEngineProfile-Startup.json  README.md
MykaEditor/: CMakeLists.txt
MykaEditor/assets/: 3DCube.myka  3DExample.myka  MykaEditor.myka  Platform.myka  YellowCube.myka
MykaEditor/assets/scenes/: Box-transp.myka  Box.myka  Platform.myka  Sandbox.myka  TexturedPlatform.myka  YellowCube.myka
MykaEditor/assets/shaders/: FlatColor.glsl  Texture.glsl
MykaEditor/src/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.hpp  MykaEditorApp.cpp
MykaEditor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
MykaEngine/: CMakeLists.txt
MykaEngine/include/MykaEngine/: MykaEngine.hpp
MykaEngine/src/: mykapch.hpp
MykaEngine/src/MykaEngine/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  KeyCodes.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  MouseButtonCodes.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  Window.hpp
MykaEngine/src/MykaEngine/Core/: Application.cpp  Application.hpp  Base.hpp  Core.hpp  EntryPoint.hpp  Input.cpp  Input.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  MouseCodes.hpp  Timer.hpp  Timestep.hpp  Window.cpp  Window.hpp
MykaEngine/src/MykaEngine/Debug/: Instrumentor.hpp
MykaEngine/src/MykaEngine/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
MykaEngine/src/MykaEngine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp
MykaEngine/src/MykaEngine/Renderer/: Buffer.cpp  Buffer.hpp  Camera.hpp  EditorCamera.cpp  EditorCamera.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsContext.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  SubTexture2D.cpp  SubTexture2D.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp
MykaEngine/src/MykaEngine/Scene/: Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneSerializer.cpp  SceneSerializer.hpp  ScriptableEntity.hpp
MykaEngine/src/MykaEngine/Utils/: PlatformUtils.hpp
MykaEngine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
MykaEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.hpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.hpp
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: Texture.glsl
Sandbox/assets/textures/shaders/: Texture.glsl
Sandbox/src/: ParticleSystem.cpp  ParticleSystem.hpp  Sandbox2D.cpp  Sandbox2D.hpp  SandboxApp.cpp
scripts/: Win-BuildRelease.bat  Win-GenProjects.bat
